Implementado deleteRoom
